--- a/23.Adding_Payments/project/package.json
+++ b/23.Adding_Payments/project/package.json
@@ -33,6 +33,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.12.3",
     "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "sequelize": "^5.0.0-beta.11",
+    "stripe": "^8.176.0"
   }
 }
