--- a/25.Working_with_REST_APIs_The_Practical_Application/project/package.json
+++ b/25.Working_with_REST_APIs_The_Practical_Application/project/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "mongoose": "^6.0.6",
     "nodemon": "^2.0.12"
   },
   "devDependencies": {},
