--- a/25.Working_with_REST_APIs_The_Practical_Application/project/package.json
+++ b/25.Working_with_REST_APIs_The_Practical_Application/project/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "mongoose": "^6.0.6",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12"
   },
   "devDependencies": {},
