--- a/25.Working_with_REST_APIs_The_Practical_Application/project/package.json
+++ b/25.Working_with_REST_APIs_The_Practical_Application/project/package.json
@@ -11,7 +11,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.6",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {},
   "scripts": {
